--- a/hospit-ai/app/components/TablaPedidos/CheckBox/CheckBox.module.css
+++ b/hospit-ai/app/components/TablaPedidos/CheckBox/CheckBox.module.css
@@ -1,6 +1,13 @@
 
-.checkmark{
-    height: 2rem;
+.Xbox{
     width: 2rem;
-    background-color: #6a6a6a;
+    height: 2rem;
+    border: 1px solid #ffb5b5;
+    color: #ffb5b5;
+}
+
+.Xbox:hover{
+    cursor: pointer;
+    border: 1px solid #c80000;
+    color: #c80000;
 }
